# Diffusion-Based-Brightfield-Image-Generation

./: .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  create_det_ds.ipynb  create_detection_datasets.py  filter_well_edge_app.py  image_comparison.py  pyproject.toml  upload_to_hf_hub.ipynb
src/: custom_test.py  dm.py  image_datasets.py  inference.py  inference_diffusion.py  main.py  test_det.py  test_detection.py  test_diffusion.py  test_schedulers.py  train_det.py  train_detection.py  train_diffusion.py  utils.py
src/config/: train.yaml
src/config/data/: bfscc.yaml
src/config/model/: scc_v1.yaml
src/configs/: train.yaml
src/configs/data/: bfscc.yaml  bfscc_filtered.yaml
src/configs/logger/: wandb.yaml
src/configs/model/: scc_medium_attn.yaml  scc_v1.yaml  scc_v2.yaml  scc_v3.yaml  scc_v4.yaml
src/configs/scheduler/: ddim.yaml
src/logger/: wandb.yaml
