[tool.poetry]
name = "thesis-research"
version = "0.1.0"
description = ""
authors = ["mario-dg <mario.dagraca@gmx.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.10"
datasets = "2.16.1"
huggingface-hub = "0.20.3"
jupyter = "^1.0.0"
pillow = "10.2.0"
jsonlines = "^4.0.0"
tk = "^0.1.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
